[package]
edition = "2021"
name = "pulschar"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio", "async"] }
napi-derive = "2.12.2"
futures = "0.3.31"
nanoid = "0.4.0"
pulsar = "6.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.87"
tokio = "1.43.0"
env_logger = "0.11.6"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
